force-app/main/default/objects/Order/fields/NF_Accounting_Contact__c.field-meta.xml
<CustomField>
    <fullName>NF_Accounting_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>