force-app/main/default/objects/Order/fields/NF_Debook_Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>NF_Debook_Auto_Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debook Auto-Renew</label>
    <type>Checkbox</type>
</CustomField>